--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,24 +28,18 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
       
-    -  name: Set up QEMU
-       uses: docker/setup-qemu-action@v2
-       
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-      
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
+    - name: Build with Gradle
+      run: ./gradlew build
+
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v4
       with:
-           username: ${{ secrets.DOCKERHUB_USERNAME }}
-           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-          context: .
-          push: true
-          tags: maheshdandu/new-app:tagname
+        image: maheshdandu/new-app
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+
 
   
          
