--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Build and Test with Gradle
+      run: |
+        ./gradlew clean test
 
     - name: Build with Gradle
       run: ./gradlew build
