--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,37 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Login to Docker Hub
+      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+        # If using a Docker Hub access token instead of a password:
+        # run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }} docker.io
+
+    - name: Build Docker Image
+      run: docker build -t maheshdandu/new-app:tagname .
+        # Replace 'your-docker-hub-username' and 'your-image-name' with your Docker Hub username and image name
+
+    - name: Push Docker Image
+      run: docker push maheshdandu/new-app:tagname
+
+    - name: Logout from Docker Hub
+      run: docker logout
+Customize this YAML file by replacing your-docker-hub-username and your-image-name with your Docker Hub username and the name you want for your Docker image.
+
+Commit and Push:
+
+Commit the workflow file to your GitHub repository and push it. The workflow will automatically trigger when you push changes to the specified branch (in this case, the main branch).
+
+Monitor Workflow Execution:
+
+Go to the "Actions" tab in your GitHub repository to monitor the workflow's execution. You can check the progress and view the logs to verify that the Docker image was built and pushed successfully.
+
+With this workflow, your Docker image will be built and deployed to Docker Hub whenever you push changes to the specified branch. Make sure to keep your Dockerfile and other configurations up to date as needed for your application.
+
+
+
+
+
+  
       
     
 
