--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,22 +30,29 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
+       
+  
+    - name: Log in to Docker Hub
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       
-    - name: Login to Docker Hub
-      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-        # If using a Docker Hub access token instead of a password:
-        # run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }} docker.io
-
-    - name: Build Docker Image
-      run: docker build -t maheshdandu/new-app:tagname .
-        # Replace 'your-docker-hub-username' and 'your-image-name' with your Docker Hub username and image name
-
-    - name: Push Docker Image
-      run: docker push maheshdandu/new-app:tagname
-
-    - name: Logout from Docker Hub
-      run: docker logout
-
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      with:
+          images: maheshdandu/new-app
+      
+    - name: Build and push Docker image
+      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+   
+      
 
 
 
