--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
        with:
           context: .
           push: true
-          tags: user/app:latest
+          tags: maheshdandu/new-app:latest
    
       
 
