--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,8 @@ jobs:
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
+    - name: Add execute permissions recursively
+      run: find   ./build/libs  -type d -exec chmod +x {} \;      
     - name: Add execute permission
       run: chmod 776 ./build/libs   
     - name: List Contents of Directory
