--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Add execute permissions recursively
       run: find   ./build/libs  -type d -exec chmod +x {} \;      
     - name: Add execute permission
-      run: chmod go+rx file_or_directory ./build/libs
+      run: chmod go+rx ./build/libs
     - name: chnage owner name
       run: chwon docker:docker  ./build/libs
   
