--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,9 @@ jobs:
       run: find   ./build/libs  -type d -exec chmod +x {} \;      
     - name: Add execute permission
       run: chmod go+rx ./build/libs
-    - name: chnage owner name
-      run: chown docker:docker  ./build/libs
+    #- name: chnage owner name
+    
+      #run: chown docker:docker  ./build/libs
   
     - name: List Contents of Directory
       run: |
