--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,35 +32,19 @@ jobs:
       run: ./gradlew build
        
   
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-      
-    -  name: Set up Docker Buildx
-       uses: docker/setup-buildx-action@v2
-      
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v4
       with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Add execute permissions recursively
-      run: find ./build/libs/*/my-app-1.0-SNAPSHOT.jar  -type f -exec chmod +x {} \;      
-    - name: Add execute permission
-      run: chmod go+rx ./build/libs/*/my-app-1.0-SNAPSHOT.jar
-    #- name: chnage owner name
-    
-      #run: chown docker:docker  ./build/libs
-  
+        image: maheshdandu/new-app
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+             
     - name: List Contents of Directory
       run: |
           ls -l ./build/libs/my-app-1.0-SNAPSHOT.jar        
       
-    -  name: Build and push
-       uses: docker/build-push-action@v4
-       with:
-          context: .
-          push: true
-          tags: maheshdandu/new-app:latest
+    
       
            
    
